add navigation to index

--- a/index.html
+++ b/index.html
@@ -6,3 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
+<section>
+  <nav role="navigation">
+    <ul>
+      <li><a hreF="#about-me"> About Me</a></li>
+      <li><a href="#my-work"> My Work</a></li>
+    </ul>
+  </nav>
