add hero banner to index

--- a/index.html
+++ b/index.html
@@ -13,3 +13,6 @@
       <li><a href="#my-work"> My Work</a></li>
     </ul>
   </nav>
+  <header class="hero-banner">
+    <img src="https://placeimg.com/640/280/any">
+  </header>
