--- a/index.html
+++ b/index.html
@@ -16,3 +16,23 @@
   <header class="hero-banner">
     <img src="https://placeimg.com/640/280/any">
   </header>
+  <main>
+    <div id="about-me"class="about-me">
+      <h2> About Me</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <img src="https://placeimg.com/200/200/people">
+    </div>
+    <div id="my-work" class="my-work">
+      <h2> My Work </h2>
+      <img src="https://placeimg.com/200/200/people">
+      <img src="https://placeimg.com/200/200/people">
+      <img src="https://placeimg.com/200/200/people">
+      <img src="https://placeimg.com/200/200/people">
+      <img src="https://placeimg.com/200/200/people">
+      <img src="https://placeimg.com/200/200/people">
+    </div>
+  </main>
+  <footer>
+    <small><p> © Hanna Carkner-Botte 2022 </p></small>
+  </section>
+  </html>
