--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Profile Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <section>
   <nav role="navigation">
@@ -14,13 +18,15 @@
     </ul>
   </nav>
   <header class="hero-banner">
-    <img src="https://placeimg.com/640/280/any">
+    <img src="images/boots.jpg">
   </header>
   <main>
     <div id="about-me"class="about-me">
+      <div class="text">
       <h2> About Me</h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <img src="https://placeimg.com/200/200/people">
+      </div>
+      <img src="images/mala.jpg" width="400" height="400">
     </div>
     <div id="my-work" class="my-work">
       <h2> My Work </h2>
