update work images on index

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
     </div>
     <div id="my-work" class="my-work">
       <h2> My Work </h2>
-      <img src="https://placeimg.com/200/200/people">
-      <img src="https://placeimg.com/200/200/people">
-      <img src="https://placeimg.com/200/200/people">
-      <img src="https://placeimg.com/200/200/people">
-      <img src="https://placeimg.com/200/200/people">
-      <img src="https://placeimg.com/200/200/people">
+      <img src="images/harley.png">
+      <img src="images/roadsigns.png">
+      <img src="images/monster.jpg">
+      <img id="sustain" src="images/sustain.png">
+      <img src="images/nile.png">
+      <img src="images/infographic.png">
     </div>
   </main>
   <footer>
     <small><p> © Hanna Carkner-Botte 2022 </p></small>
+  </footer>
   </section>
   </html>
