add go back button to index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <section>
-  <nav role="navigation">
+  <nav id="navigation" role="navigation">
     <ul>
       <li><a hreF="#about-me"> About Me</a></li>
       <li><a href="#my-work"> My Work</a></li>
@@ -36,6 +36,7 @@
       <img id="sustain" src="images/sustain.png">
       <img src="images/nile.png">
       <img src="images/infographic.png">
+      <a href=#navigation> Go Back Up </a>
     </div>
   </main>
   <footer>
