update background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="about-me"class="about-me">
       <div class="text">
       <h2> About Me</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>I'm Hanna, a 22 year old student graphic designer. My design preferences are bright and fun logo designs to target a younger audience with my work. I'm also retail worker as well as a cat mom. I'm hoping in the future I get to design logos for a living because it's what I love.</p>
       </div>
       <img src="images/mala.jpg" width="400" height="400">
     </div>
